k8s/app/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - port: 3000
      targetPort: 3000
      name: http
