k8s/app/mysql-exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-exporter
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-exporter
  template:
    metadata:
      labels:
        app: mysql-exporter
    spec:
      containers:
        - name: mysqld-exporter
          image: prom/mysqld-exporter:v0.14.0
          ports:
            - containerPort: 9104
              name: metrics
          resources:
            requests:
              memory: 32Mi
              cpu: 50m
            limits:
              memory: 64Mi
              cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-exporter
  namespace: app
spec:
  selector:
    app: mysql-exporter
  ports:
    - port: 9104
      targetPort: 9104
      name: metrics
