k8s/app/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: app
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
      name: mysql
  clusterIP: None
